--- a/ES6/c01_es6_build_env/package.json
+++ b/ES6/c01_es6_build_env/package.json
@@ -4,7 +4,7 @@
   "description": "这是ES6的HelloWorld测试代码",
   "main": "index.js",
   "scripts": {
-    "build": "babel src/index.js -o dist/index.js"
+    "build": "babel src/index2.js -o dist/index2.js"
   },
   "keywords": [],
   "author": "",
