--- a/Vue/vue-copy-eleme/package.json
+++ b/Vue/vue-copy-eleme/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
